--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -9,9 +9,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -19,9 +19,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -29,9 +29,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -39,9 +39,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -49,9 +49,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -59,9 +59,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -69,9 +69,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -79,9 +79,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -89,9 +89,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -99,9 +99,9 @@
 \cardimage{N7} 
 \cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardcontent{When you gain this, Garun loses 1 nemesis token. When this is destroyed, return this to the Dissolver supply pile. \newline Gain 1 charge. Destroy this.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -109,9 +109,109 @@
 \cardimage{N7} 
 \cardtitle{Regeneration} 
 \cardborder{} 
-\cardcontent{\Immediately: Place two power tokens on this for each player after the first. \Power 1: Garun gains four nemesis tokens.} 
+\cardcontent{\Immediately: Place one power tokens on this for each player after the first. \Power 1: Garun gains six nemesis tokens.} 
 \cardprice{0} 
-\sync{0.13}
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{N6} 
+\cardtitle{Void Spell} 
+\cardborder{} 
+\cardcontent{\Cast: Place a card in hand into the Void. Deal damage equal to the strength of the Void.} 
+\cardprice{6} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{N6} 
+\cardtitle{Void Spell} 
+\cardborder{} 
+\cardcontent{\Cast: Place a card in hand into the Void. Deal damage equal to the strength of the Void.} 
+\cardprice{6} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{N6} 
+\cardtitle{Void Spell} 
+\cardborder{} 
+\cardcontent{\Cast: Place a card in hand into the Void. Deal damage equal to the strength of the Void.} 
+\cardprice{6} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{N6} 
+\cardtitle{Void Spell} 
+\cardborder{} 
+\cardcontent{\Cast: Place a card in hand into the Void. Deal damage equal to the strength of the Void.} 
+\cardprice{6} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{N6} 
+\cardtitle{Void Spell} 
+\cardborder{} 
+\cardcontent{\Cast: Place a card in hand into the Void. Deal damage equal to the strength of the Void.} 
+\cardprice{6} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N6} 
+\cardtitle{Void Relic} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \newline You may place up to two cards you played this turn into the Void.} 
+\cardprice{4} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N6} 
+\cardtitle{Void Relic} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \newline You may place up to two cards you played this turn into the Void.} 
+\cardprice{4} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N6} 
+\cardtitle{Void Relic} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \newline You may place up to two cards you played this turn into the Void.} 
+\cardprice{4} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N6} 
+\cardtitle{Void Relic} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \newline You may place up to two cards you played this turn into the Void.} 
+\cardprice{4} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N6} 
+\cardtitle{Void Relic} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \newline You may place up to two cards you played this turn into the Void.} 
+\cardprice{4} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
