--- a/ZXcList2.tex
+++ b/ZXcList2.tex
@@ -6,152 +6,332 @@
 \begin{document}
 \begin{center}\begin{tikzpicture} 
 \cardbackground{Gem} 
-\cardimage{S8} 
+\cardimage{G13} 
 \cardtitle{Hungering Vimite} 
 \cardborder{} 
 \cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{3} 
-\sync{0.13}
+\cardprice{4} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Gem} 
-\cardimage{S8} 
+\cardimage{G13} 
 \cardtitle{Hungering Vimite} 
 \cardborder{} 
 \cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{3} 
-\sync{0.13}
+\cardprice{4} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Gem} 
-\cardimage{S8} 
+\cardimage{G13} 
 \cardtitle{Hungering Vimite} 
 \cardborder{} 
 \cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{3} 
-\sync{0.13}
+\cardprice{4} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Gem} 
-\cardimage{S8} 
+\cardimage{G13} 
 \cardtitle{Hungering Vimite} 
 \cardborder{} 
 \cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{3} 
-\sync{0.13}
+\cardprice{4} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Gem} 
-\cardimage{S8} 
+\cardimage{G13} 
 \cardtitle{Hungering Vimite} 
 \cardborder{} 
 \cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{3} 
-\sync{0.13}
+\cardprice{4} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R7} 
-\cardtitle{Marble Galaxy} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R7} 
-\cardtitle{Marble Galaxy} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R7} 
-\cardtitle{Marble Galaxy} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R7} 
-\cardtitle{Marble Galaxy} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R7} 
-\cardtitle{Marble Galaxy} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R13} 
-\cardtitle{Quickening Globe} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R13} 
-\cardtitle{Quickening Globe} 
+\cardbackground{Gem} 
+\cardimage{G3} 
+\cardtitle{Echoing Globe} 
 \cardborder{} 
-\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R13} 
-\cardtitle{Quickening Globe} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
 \cardborder{} 
-\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
-\cardprice{3} 
-\sync{0.13}
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R13} 
-\cardtitle{Quickening Globe} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
 \cardborder{} 
-\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
-\cardprice{3} 
-\sync{0.13}
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R13} 
-\cardtitle{Quickening Globe} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
 \cardborder{} 
-\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G5} 
+\cardtitle{Grim Garnet} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
 \cardprice{3} 
-\sync{0.13}
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G12} 
+\cardtitle{Everlove} 
+\cardborder{} 
+\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G1} 
+\cardtitle{Rhythm Ruby} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
+\cardprice{3} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -159,10 +339,10 @@
 \cardimage{R10} 
 \cardtitle{Oracle's Vigor} 
 \cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
 \cardprice{3} 
 \carddevcost{2} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -170,10 +350,10 @@
 \cardimage{R10} 
 \cardtitle{Oracle's Vigor} 
 \cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
 \cardprice{3} 
 \carddevcost{2} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -181,10 +361,10 @@
 \cardimage{R10} 
 \cardtitle{Oracle's Vigor} 
 \cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
 \cardprice{3} 
 \carddevcost{2} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -192,10 +372,10 @@
 \cardimage{R10} 
 \cardtitle{Oracle's Vigor} 
 \cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
 \cardprice{3} 
 \carddevcost{2} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -203,310 +383,10 @@
 \cardimage{R10} 
 \cardtitle{Oracle's Vigor} 
 \cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
 \cardprice{3} 
 \carddevcost{2} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Visionary Staff} 
-\cardborder{} 
-\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Visionary Staff} 
-\cardborder{} 
-\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Visionary Staff} 
-\cardborder{} 
-\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Visionary Staff} 
-\cardborder{} 
-\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Visionary Staff} 
-\cardborder{} 
-\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Boundless Spark} 
-\cardborder{} 
-\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
-\cardprice{3} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Boundless Spark} 
-\cardborder{} 
-\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
-\cardprice{3} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Boundless Spark} 
-\cardborder{} 
-\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
-\cardprice{3} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Boundless Spark} 
-\cardborder{} 
-\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
-\cardprice{3} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Boundless Spark} 
-\cardborder{} 
-\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
-\cardprice{3} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Jeweled Shrapnel} 
-\cardborder{} 
-\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{4} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Jeweled Shrapnel} 
-\cardborder{} 
-\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{4} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Jeweled Shrapnel} 
-\cardborder{} 
-\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{4} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Jeweled Shrapnel} 
-\cardborder{} 
-\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{4} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Jeweled Shrapnel} 
-\cardborder{} 
-\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{4} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S23} 
-\cardtitle{Amethyst Launcher} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S23} 
-\cardtitle{Amethyst Launcher} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S23} 
-\cardtitle{Amethyst Launcher} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S23} 
-\cardtitle{Amethyst Launcher} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S23} 
-\cardtitle{Amethyst Launcher} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S24} 
-\cardtitle{Ancient Focuser} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S24} 
-\cardtitle{Ancient Focuser} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S24} 
-\cardtitle{Ancient Focuser} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S24} 
-\cardtitle{Ancient Focuser} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S24} 
-\cardtitle{Ancient Focuser} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
-\cardprice{6} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S25} 
-\cardtitle{Obliterating Arc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
-\cardprice{7} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S25} 
-\cardtitle{Obliterating Arc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
-\cardprice{7} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S25} 
-\cardtitle{Obliterating Arc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
-\cardprice{7} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S25} 
-\cardtitle{Obliterating Arc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
-\cardprice{7} 
-\sync{0.13}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S25} 
-\cardtitle{Obliterating Arc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
-\cardprice{7} 
-\sync{0.13}
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
