--- a/ZXcList3.tex
+++ b/ZXcList3.tex
@@ -4,5 +4,205 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}\end{center}
+\begin{center}\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m6} 
+\cardtitle{Fused Opral} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. Any ally may discard a spell in hand. If they do, that ally gains 1 \Money{} token.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m8} 
+\cardtitle{Emberstone Forge} 
+\cardborder{} 
+\cardcontent{\small {Gain 1 \Money{}.} \newline \Or \newline \small {Any ally destroys a gem in hand. That player gains a card that costs up to 2 \Money{} more than the destroyed card from the Arcanite deck and places it into their hand.}} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m7} 
+\cardtitle{Genesis Emerald} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline \Or \newline Discard two cards in hand. If you do, gain the top card of the Firethorn deck. Place that card in any player's discard pile.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m10} 
+\cardtitle{Doomstone} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money{}. Slyvia gains 2 doom. \newline \Or \newline Slyvia loses 1 doom.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m10} 
+\cardtitle{Doomstone} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money{}. Slyvia gains 2 doom. \newline \Or \newline Slyvia loses 1 doom.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m13} 
+\cardtitle{Reality Weaver} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. The next time you gain a charge this turn, Althea 1 knowledge.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{m2} 
+\cardtitle{Sagestone Staff} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline You may lose 1 knowledge. If you do, gain a charge.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{m2} 
+\cardtitle{Sagestone Staff} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline You may lose 1 knowledge. If you do, gain a charge.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Blooming Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. Conjure.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Blooming Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. Conjure.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Revealing Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast Deal 3 damage. Focus your breach with the lowest focus cost.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Revealing Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast Deal 3 damage. Focus your breach with the lowest focus cost.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Imbued Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. \newline If you have 2 or more charges, you may destroy a card in hand.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Imbued Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. \newline If you have 2 or more charges, you may destroy a card in hand.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Arcing Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. Gain 1 charge.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Arcing Firethorn} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. Gain 1 charge.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Bursting Firethorn} 
+\cardborder{} 
+\cardcontent{While prepped, when you gain a card, deal 1 damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m7} 
+\cardtitle{Bursting Firethorn} 
+\cardborder{} 
+\cardcontent{While prepped, when you gain a card, deal 1 damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{5} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m10} 
+\cardtitle{Call of Doom} 
+\cardborder{} 
+\cardcontent{\Cast: Sylvia gains 2 doom. Deal 3 damage. \newline \Or \newline \Cast: Deal 0 damage. Sylvia loses 1 doom.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m10} 
+\cardtitle{Call of Doom} 
+\cardborder{} 
+\cardcontent{\Cast: Sylvia gains 2 doom. Deal 3 damage. \newline \Or \newline \Cast: Deal 0 damage. Sylvia loses 1 doom.} 
+\cardprice{0} 
+\sync{0.14}
+\end{tikzpicture}
+\hspace{-4mm}
+\end{center}
 \end{document}
