--- a/charSheetInco.tex
+++ b/charSheetInco.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Inco}{m7}
-\ability{Massive Growth: Activate during your main phase: \newline Two different players place up to two Rose Thorns in their deck and discard pile into their hand.}{4}
+\ability{Massive Growth: Activate during your main phase: \newline Two different players place up to two Firethorns in their deck and discard pile into their hand.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Emerald of Vigor}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Shuffle the Rose Thorn cards. These cards form the Rose Thorn deck. This is not a supply pile. The top card of this deck is always revealed. Cards in this deck can be gained using Inco's Emerald of Vigor. Additionally, Inco may spend 5 \Money{} to gain the top card from this deck.}
+\startingHand{Genesis Emerald}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{Shuffle the Firethorn cards. These cards form the Firethorn deck. This is not a supply pile. The top card of this deck is always revealed. Inco may spend 5 \Money{} to gain the top card from this deck.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
