--- a/charSheetIndira.tex
+++ b/charSheetIndira.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Indira}{m6}
-\ability{Pyromancer's Guile: Activate during your main phase: Cast a spell in any ally's hand twice. \newline \Or \newline Gain 5 \Money{} that can only be used to gain a spell.}{4}
+\ability{Pyromancer's Guile: Activate during your main phase: Cast a spell in any ally's hand twice. \newline \Or \newline Gain 5 \Money{} that can only be used to gain a spell.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Fused Opral}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{When a spell is cast from Indira's opened III breach, place that spell into any ally's hand.}
-\startingPrep{}{1}{rent1.png}{1}{rent2.png}{4}{}{1}
+\notes{When a spell is cast from Indira's opened III breach, that spell deals 1 additional damage and is placed into any ally's hand.}
+\startingPrep{}{1}{rent1.png}{1}{rent2.png}{1}{}{1}
 \end{tikzpicture}
 
  \end{document}
