--- a/ZXbSheet.tex
+++ b/ZXbSheet.tex
@@ -26,21 +26,40 @@
 \pagestyle{empty}\begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{Void Kris \image{N6} \hp{30}};
-\setup{Replace a spell and relic supply pile with the Void Spell, Relic. These are in the supply. Place 4/3/2/1 crystals from the box next to this mat to form the Void deck. This is not a supply pile. Cards can only be placed into the Void or removed from it when effects specify to do so.}
-\unleash{Gain 1 nemesis token.}
+\name{Doc Seismic \image{} \hp{50}};
+\setup{Place the Magmanite cards in a pile faceup to form the Magmanite deck and set it next to this mat, as the Villain side deck.
+
+Flip this mat over and place the Villain Disk on space 2 of the Heat track. If you are playing with 4 players, place the Villain Disk on space 0 instead.}
+\unleash{}
 \difficulty{}
-\rules{A card's strength in the void is equal to its cost, minmum 1. The strength of the void is the sum of the strength of all the cards in the void. \newline When a player deals damage to Void Kris with a source besides the Void spell, that player deals 0 damage instead. When a player deals damage to Void Kris with a spell besides the Void spell, that player may place the cast spell on top of the Void deck. At the end of the nemesis turn, if the nemesis has 5 or more nemesis tokens, the nemesis loses 5 nemesis tokens and the players collectively gain eight cards from the Void. When a player would gain a card from the Void and can't, Gravehold suffers 5 damage instead.};\diffR{};
+\rules{When a Magmanite would be placed into play and the Magmanite deck is empty, any player suffers 4 damage instead.
+If the Heat track would be increased and cannot be, The City suffers 1 damage for each time it would be increased.};\diffR{};
 \end{tikzpicture}
 
 \begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{Garun \image{N7} \hp{99}};
-\setup{Replace a relic supply pile in the supply with Dissolver. Garun gains 4 nemesis tokens. }
-\unleash{If this has 0 nemesis tokens, remove 1 power token from Regeneration. Otherwise, advance the World Splitter track.}
+\name{The Cruise Kaiju \image{} \hp{20}};
+\setup{Set aside the "That's Enough!" aid card. Shuffle the other Aid cards in a pile facedown next to the Boss Mat to form the Aid Deck. Place the "That's Enough!" aid card at the bottom of the Aid Deck. If you are playing with 1 or 2 players, discard the top card of the Aid Deck. 
+
+Shuffle the Annisa Turn Order Card into the Turn Order Deck. Then, Flip this mat over.}
+\unleash{}
 \difficulty{}
-\rules{When a player deals damage to Garun while Garun has a nemesis token, reduce that damage to 1. Double all damage dealt to Garun while Garun has 0 nemesis tokens. When Garun has 0 nemesis tokens, reset the World Splitter track to start, place the Regeneration power into play. };\diffR{};
+\rules{The Anissa Turn Order Card is neither a player turn or a villain turn.
+When the Anissa Turn Order Card is drawn from the Turn Order Deck, draw the top card of the Aid Deck and discard it.
+When The Cruise Kaiju is defeated, instead of winning the game, remove all of the Kaiju’s cards and its board from the game. Then, set up and fight Anissa.};\diffR{};
+\end{tikzpicture}
+
+\begin{tikzpicture} 
+\draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
+\draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
+\name{Anissa \image{} \hp{60}};
+\setup{Other than replacing The Cruise Kaiju, keep everything else the same. 
+If there are 2/3/4/5 Aid cards in the Aid discard pile, place Anissa's level 2/3/4/5 token into play.
+Then, Flip this mat over.}
+\unleash{}
+\difficulty{}
+\rules{The Anissa turn order card is a third Villain turn. When the Anissa turn order card is drawn, resolve a Villain turn.};\diffR{};
 \end{tikzpicture}
 
 
